correction of the coding style

--- a/web_development/day3/index.html
+++ b/web_development/day3/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-
   <title>Document</title>
 </head>
-
 <body>
   <main>
     <div class="overlay">
@@ -30,7 +27,6 @@
         <button>PLAY</button>
       </div>
       <div class="pictures">
-
       </div>
     </div>
   </main>
@@ -51,7 +47,8 @@
             quis
             facilisis enim magna sit amet sapien.
             Curabitur pellentesque est vel faucibus laoreet.
-            Aliquam erat volutpat.</p>
+            Aliquam erat volutpat.
+          </p>
         </div>
       </div>
       <div class="right-text">
@@ -161,5 +158,4 @@
     </div>
   </div>
 </body>
-
 </html>
